# alert_auto_dexterity

./: .gitignore  CMakeLists.txt  package.xml
action/: ManipulatorAction.action  StandInFront.action
bt/: alphabet.xml  dexterity.btproj  j.btproj  untitled_1.xml  untitled_2.xml
bt_nodes/: apply_planning_scene.cpp  change_state.cpp  execute.cpp  get_octomap.cpp  manipulator_action.cpp  manipulator_joints.cpp  see_object_set.cpp  see_object_set.hpp  spot_distance.cpp  spot_rotate.cpp  stand_in_front.cpp  store_object_list.cpp  trajectory_to_frame.cpp  trigger.cpp
cpp/: depth_to_pointcloud2.cpp
gpp_agents/: estops_omni.gpp
gpp_framework/: barebones_framework.gpp  framework.gpp
launch/: estop_tf2_launch.py  estops_omni_launch.py  nodes_launch.py
models/estop_omni_openvino_model/: estop_omni.xml  metadata.yaml
models/estop_openvino_model/: estop.xml  metadata.yaml
pbvs/: follow_estop_tf2.py  follow_estop_tf2_mp.py  instructions.md
python/alert_auto_dexterity/: add_octomap.py  add_scene_object.py  clear_box_octomap.py  find_estops.py  find_object_pose.py  find_single_estop.py  goto_estops_with_manipulator.py  gripper_action_client.py  moveit_action_client.py  moveit_ik.py  press_estop.py  see_estops_with_manipulator.py  spot_frame_trajectory.py  stand_in_front.py  utils.py  yolov8_pose_utils.py
